--- a/app/src/main/res/layout/new_composition_dialog.xml
+++ b/app/src/main/res/layout/new_composition_dialog.xml
@@ -67,6 +67,22 @@
             android:layout_height="match_parent" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dialog_new_comp_name_il"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Nome da Composição"
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialog_new_comp_width_il">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dialog_new_comp_name_et"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/dialog_new_comp_create_btn"
         android:layout_width="wrap_content"
@@ -74,7 +90,7 @@
         android:layout_margin="16dp"
         android:text="Criar"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@id/dialog_new_comp_width_il"
+        app:layout_constraintTop_toBottomOf="@id/dialog_new_comp_name_il"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
