--- a/app/src/main/res/layout/activity_composition.xml
+++ b/app/src/main/res/layout/activity_composition.xml
@@ -10,7 +10,7 @@
         android:id="@+id/composition_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#B0000000"
+        android:background="@color/frame_layout_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,9 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_add_circle_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -32,9 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_edit_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/composition_add_actor_btn" />
 
@@ -43,9 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_push_pin_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/composition_edit_actor_btn" />
 
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_stop_24"
         android:tint="@android:color/holo_red_light"
         android:visibility="gone"
@@ -66,66 +66,78 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_north_east_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/composition_fix_actors_btn" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/composition_save_frame_btn"
+        android:id="@+id/composition_save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_done_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/composition_play_frame_btn"
+        android:id="@+id/composition_play_scene_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_play_arrow_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/composition_pause_frame_btn"
+        android:id="@+id/composition_pause_scene_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_pause_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/composition_back_frame_btn"
+        android:id="@+id/composition_back_scene_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_arrow_back_24"
-        android:tint="#FFFFFF"
+        android:tint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/composition_next_frame_btn"
+        android:id="@+id/composition_next_scene_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="#00FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_baseline_arrow_forward_24"
-        android:tint="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@id/composition_back_frame_btn"
+        android:tint="@color/white"
+        app:layout_constraintStart_toEndOf="@id/composition_back_scene_btn"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/composition_scene_count_tv"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="12dp"
+        android:layout_width="48dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/composition_next_scene_btn"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
