--- a/app/src/main/res/layout/edit_actor_dialog.xml
+++ b/app/src/main/res/layout/edit_actor_dialog.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Editar bailarino"
+            android:text="@string/edit_dancer_title_dialog"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:hint="Nome"
+            android:hint="@string/name_hint_dialog"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialog_edit_close_btn">
@@ -49,8 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Cor:"
-            android:textColor="@color/black"
+            android:text="@string/color_hint_dialog"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialog_edit_actor_name_il" />
 
@@ -66,19 +65,19 @@
                 android:id="@+id/dialog_edit_color_1_rd_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Azul" />
+                android:text="@string/blue_radio_btn" />
 
             <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/dialog_edit_color_2_rd_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Vermelho" />
+                android:text="@string/red_radio_btn" />
 
             <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/dialog_edit_color_3_rd_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Verde" />
+                android:text="@string/green_radio_btn" />
         </RadioGroup>
 
         <com.google.android.material.button.MaterialButton
@@ -86,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Editar"
+            android:text="@string/edit_btn_dialog"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialog_edit_color_rd_gp" />
@@ -96,7 +95,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Remover"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:text="@string/remove_dialog_btn"
             android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialog_edit_color_rd_gp" />
