--- a/app/src/main/res/layout/get_actors_dialog.xml
+++ b/app/src/main/res/layout/get_actors_dialog.xml
@@ -13,7 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Selecione um ator:"
+            android:text="@string/select_actor_dialog_title"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
